Add Framework 4 features doc and rewrite build configuration guide